@@ -1,13 +1,17 @@
 2009-01-29  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclNamesp.c (Tcl_FindCommand): [Bug 2519474]: Ensure that
+	the path is not searched when the TCL_NAMESPACE_ONLY flag is given.
+
 	* generic/tclOODecls.h (Tcl_OOInitStubs): [Bug 2537839]: Make the
 	declaration of this macro work correctly in the non-stub case.
 
 2009-01-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclInterp.c:	Convert the [interp] command into a
-	[namespace ensemble].  Work in progress to NRE-enable the
-	[interp invokehidden] subcommand.
+	* tests/interp.test:	[namespace ensemble].  Work in progress
+	* tests/nre.test:	to NRE-enable the [interp invokehidden]
+	subcommand.
 
 2009-01-29  Donal K. Fellows  <dkf@users.sf.net>
 
